# Pedro-Augusto-Barbbosa-Aparecido-170-AG2

./: README.md  app.py  database.py  docker-compose.yml  main.py  model.py  pyproject.toml  script.ipynb
